--- a/Resources/Prototypes/_RMC14/Guidebook/RMC14Guidebook.yml
+++ b/Resources/Prototypes/_RMC14/Guidebook/RMC14Guidebook.yml
@@ -50,7 +50,7 @@
   id: RMCNMSOP
   priority: 0
   name: "Non-Modifiable Standard Operating Procedure"
-  text: "/ServerInfo/Guidebook/_RMC14/Marine Law/Non-Modifiable SOP/N-M SOP.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/MarineLaw/Non-Modifiable SOP/N-MSOP.xml"
   children:
   - RMCTPPersonnel
   - RMCNuclear
@@ -66,7 +66,7 @@
   id: RMCSOP
   priority: 0
   name: "Standard Operating Procedure"
-  text: "/ServerInfo/Guidebook/_RMC14/Marine Law/SOP/SOP.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/MarineLaw/SOP/SOP.xml"
   children:
   - RMCARES
   - RMCCO
@@ -88,28 +88,28 @@
   id: RMCARES
   priority: 4
   name: "ARES AI Core"
-  text: "/ServerInfo/Guidebook/_RMC14/Marine Law/SOP/ARES AI Core.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/MarineLaw/SOP/AresAiCore.xml"
 
   - type: guideEntry
   parent: RMC
   id: RMCCO
   priority: 0
   name: "Commanding Officer"
-  text: "/ServerInfo/Guidebook/_RMC14/Marine Law/SOP/Commanding Officer.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/MarineLaw/SOP/CommandingOfficer.xml"
 
   - type: guideEntry
   parent: RMC
   id: RMCDepartment
   priority: 3
   name: "Department SOP"
-  text: "/ServerInfo/Guidebook/_RMC14/Marine Law/SOP/Department SOP.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/MarineLaw/SOP/DepartmentSOP.xml"
 
   - type: guideEntry
   parent: RMC
   id: RMCEquipment
   priority: 2
   name: "Equipment"
-  text: "/ServerInfo/Guidebook/_RMC14/Marine Law/SOP/Equipment.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/MarineLaw/SOP/Equipment.xml"
   children:
   - RMCAlertEquipment
 
@@ -118,81 +118,81 @@
   id: RMCROE
   priority: 1
   name: "Rules of Engagement"
-  text: "/ServerInfo/Guidebook/_RMC14/Marine Law/SOP/Rules of Engagement.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/MarineLaw/SOP/RulesOfEngagement.xml"
 
   - type: guideEntry
   parent: RMC
   id: RMCSecurity
   priority: 5
   name: "Security"
-  text: "/ServerInfo/Guidebook/_RMC14/Marine Law/SOP/Security.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/MarineLaw/SOP/Security.xml"
 
   - type: guideEntry
   parent: RMC
   id: RMCShip
   priority: 6
   name: "Ship modifications"
-  text: "/ServerInfo/Guidebook/_RMC14/Marine Law/SOP/Ship modifications.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/MarineLaw/SOP/ShipModifications.xml"
 
   - type: guideEntry
   parent: RMC
   id: RMCCICDeployment
   priority: 2
   name: "CIC Field Deployment"
-  text: "/ServerInfo/Guidebook/_RMC14/Marine Law/Non-Modifiable SOP/CIC Field Deployment.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/MarineLaw/Non-Modifiable SOP/CICFieldDeployment.xml"
 
   - type: guideEntry
   parent: RMC
   id: RMCBriefing
   priority: 3
   name: "Conduct of Briefing"
-  text: "/ServerInfo/Guidebook/_RMC14/Marine Law/Non-Modifiable SOP/Conduct of Briefing.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/MarineLaw/Non-Modifiable SOP/ConductOfBriefing.xml"
 
   - type: guideEntry
   parent: RMC
   id: RMCEmployment
   priority: 7
   name: "Employment Regulations"
-  text: "/ServerInfo/Guidebook/_RMC14/Marine Law/Non-Modifiable SOP/Employment Regulations.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/MarineLaw/Non-Modifiable SOP/EmploymentRegulations.xml"
 
   - type: guideEntry
   parent: RMC
   id: RMCSurvivors
   priority: 6
   name: "Eviction of Survivors"
-  text: "/ServerInfo/Guidebook/_RMC14/Marine Law/Non-Modifiable SOP/Eviction of Survivors.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/MarineLaw/Non-Modifiable SOP/EvictionOfSurvivors.xml"
 
   - type: guideEntry
   parent: RMC
   id: RMCFOB
   priority: 1
   name: "Forward Operating Bases"
-  text: "/ServerInfo/Guidebook/_RMC14/Marine Law/Non-Modifiable SOP/Forward Operating Bases.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/MarineLaw/Non-Modifiable SOP/ForwardOperatingBases.xml"
 
   - type: guideEntry
   parent: RMC
   id: RMCNuclear
   priority: 0
   name: "Nuclear Protocol"
-  text: "/ServerInfo/Guidebook/_RMC14/Marine Law/Non-Modifiable SOP/Nuclear Protocol.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/MarineLaw/Non-Modifiable SOP/NuclearProtocol.xml"
 
   - type: guideEntry
   parent: RMC
   id: RMCTPPersonnel
   priority: 5
   name: "Third-Party Personnel"
-  text: "/ServerInfo/Guidebook/_RMC14/Marine Law/Non-Modifiable SOP/Third-Party Personnel.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/MarineLaw/Non-Modifiable SOP/Third-PartyPersonnel.xml"
 
   - type: guideEntry
   parent: RMC
   id: RMCArmories
   priority: 4
   name: "Armories"
-  text: "/ServerInfo/Guidebook/_RMC14/Marine Law/Non-Modifiable SOP/Armories.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/MarineLaw/Non-Modifiable SOP/Armories.xml"
 
   - type: guideEntry
   parent: RMC
   id: RMCAlertEquipment
   priority: 3
   name: "Alert level Restrictions"
-  text: "/ServerInfo/Guidebook/_RMC14/Marine Law/SOP/Alert Levels.xml"
+  text: "/ServerInfo/Guidebook/_RMC14/MarineLaw/SOP/AlertLevels.xml"
